<resources>
    <string name="app_name">EVT</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password">Password</string>
    <string name="user_id">USER_ID</string>
    <string name="student_login">Student Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="Password">Password</string>
    <string name="todo1">TODO</string>
    <string name="register1">Register</string>
    <string name="don_t_have_an_account1">don\'t have an account?</string>
    <string name="user_id1">USER_ID</string>
    <string name="driver_login1">Driver Login</string>
    <string name="login">login</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="driver_register">Driver Register</string>
    <string name="user_id2">USER_ID</string>
    <string name="password1">Password</string>
    <string name="todo2">TODO</string>
    <string name="student">Student</string>
    <string name="driver">Driver</string>
    <string name="todo3">TODO</string>
    <string name="password2">Password</string>
    <string name="login2">login</string>
    <string name="already_have_an_account3">already have an account?</string>
    <string name="student_register3">Student Register</string>
    <string name="user_id3">USER_ID</string>
    <string name="todo4">TODO</string>
    <string name="login1">Login</string>
    <string name="login3">Login</string>
    <string name="register2">Register</string>
    <string name="register3">Register</string>
    <string name="todo5">TODO</string>
    <string name="driver_login">driver_login</string>
    <string name="student_login1">student_login</string>
    <string name="don_t_have_an_account_yet2">don_t_have_an_account_yet2</string>
    <string name="student_register">student_register</string>
    <string name="password3">Password2</string>
    <string name="user_id4">user_id4</string>
    <string name="don_t_have_an_account_yet">don_t_have_an_account_yet</string>
    <string name="student_login2">student_login</string>
    <string name="todo6">TODO</string>
    <string name="student_login3">Student Login</string>
    <string name="driver_register1">Driver Register</string>
    <string name="user_id5">User ID</string>
    <string name="password4">Password</string>
    <string name="register4">Register</string>
    <string name="have_an_account">have an account?</string>
    <string name="login6">Login</string>
    <string name="student_register4">Student Register</string>
    <string name="register6">Register</string>
    <string name="password6">Password</string>
    <string name="have_an_account1">have an account?</string>
    <string name="login7">Login</string>
    <string name="user_id6">User ID</string>
    <string name="driver_login2">Driver Login</string>
    <string name="user_id7">User ID</string>
    <string name="password8">Password</string>
    <string name="have_an_account2">have an account?</string>
    <string name="login9">Login</string>
    <string name="register8">Register</string>
    <string name="password9">Password</string>
    <string name="register7">register</string>
    <string name="dont_have_an_account4">Dont have an account?</string>
    <string name="login10">Login</string>
    <string name="user_id8">User ID</string>
    <string name="todo7">TODO</string>
    <string name="location">Location</string>
    <string name="todo8">TODO</string>
    <string name="scan">scan</string>
    <string name="scan1">Scan</string>
    <string name="scan2">Scan</string>
    <string name="title_activity_maps2">Maps2Activity</string>
    <string name="todo9">TODO</string>
    <string name="tap_below_to_scan">Tap below to scan</string>
    <string name="user_id10">User Id</string>
    <string name="password10">Password</string>
    <string name="password11">Password</string>
    <string name="user_id11">User ID</string>
    <string name="user_id12">User ID</string>
    <string name="password13">Password</string>
</resources>