<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0C3F1"
    tools:context=".UserActivity">

    <Button
        android:id="@+id/btnstudent"
        android:layout_width="303dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#4E2780"
        android:text="@string/student"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndriver" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="215dp"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iitindore_logo"
        android:contentDescription="@string/todo3" />

    <Button
        android:id="@+id/btndriver"
        android:layout_width="303dp"
        android:layout_height="68dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#4E2780"
        android:text="@string/driver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>